--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
   width: 100dvw;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 header {
   display: flex;
   justify-content: space-between;
-  padding: 2rem 5.2rem 0 5.2rem;
+  align-items: center;
+  margin-top: 2rem;
+  padding: 0 5rem;
+  width: 100%;
 }
 
 nav {
@@ -22,17 +30,11 @@ nav {
 .menu {
   color: #82809C;
   margin-right: 4rem;
-  transition: 200ms ease;
+  transition: 200ms ease-in-out;
 
   &:hover {
     transform: scale(1.1);
   }
-}
-
-.user-auth {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .login-button {
@@ -46,6 +48,7 @@ nav {
   border: none;
   background-color: inherit;
   cursor: pointer;
+  transition: 50ms ease-in-out;
 
   &:active {
     transform: scale(.95);
@@ -65,12 +68,57 @@ nav {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: #2678FA;
-  padding: 0.5rem 1.5rem;
-  margin-left: 2rem;
   cursor: pointer;
+  height: 2rem;
+  width: 7rem;
+  transition: 50ms ease-in-out;
 
   &:active {
     transform: scale(0.95);
   }
+}
+
+.home {
+  margin-top: 6.2rem;
+  margin-left: 5.2rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #5712A6;
+}
+
+.home p {
+  color: #82809C;
+  line-height: 1.3;
+  margin: 3rem 0 2rem 0;
+}
+
+.home button {
+  background-image: linear-gradient(to right, #7D21E8, #26E0FA);
+  color: #fff;
+  font-size: 1.5rem;
+  border: transparent;
+  border-radius: 5px;
+  padding: 0.5rem 1.7rem;
+  cursor: pointer;
+  transition: 50ms ease-in-out;
+
+  &:active {
+    transform: scale(.95);
+  }
+
+  &:hover {
+    opacity: 0.9;
+  }
+}
+
+.home-image img {
+  max-height: 40rem;
+  width: auto;
+  height: auto;
 }
 
