--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,28 @@ h1 {
   height: auto;
 }
 
+.get-started {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 5.2rem;
+}
+
+.division {
+  display: flex;
+  justify-content: flex-start;
+  width: 17.62rem;
+}
+
+.division img {
+  width: 6.5rem;
+  height: 0.5625rem;
+}
+
+.get-started h2 {
+  color: #5712A6;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 3.5rem;
+}
+
