--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ nav {
 }
 
 .home {
-  margin-top: 6.2rem;
+  margin-top: 5rem;
   margin-left: 5.2rem;
   display: flex;
   justify-content: space-between;
@@ -89,12 +89,14 @@ h1 {
   font-size: 3rem;
   font-weight: bold;
   color: #5712A6;
+  line-height: 1.3;
 }
 
 .home p {
   color: #82809C;
   line-height: 1.3;
-  margin: 3rem 0 2rem 0;
+  margin: 2rem 0 2rem 0
+;
 }
 
 .home button {
@@ -126,24 +128,42 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 5.2rem;
-}
-
-.division {
-  display: flex;
-  justify-content: flex-start;
-  width: 17.62rem;
+  margin: 3rem 5.2rem;
 }
 
 .division img {
-  width: 6.5rem;
+  width: 8.5rem;
   height: 0.5625rem;
 }
 
 .get-started h2 {
   color: #5712A6;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: bold;
-  margin-top: 3.5rem;
+  margin-top: 3rem;
+}
+
+#get-started-cards {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-top: 4rem;
+  width: 100%;
+}
+
+#get-started-cards img {
+  width: 10rem;
+  height: 10rem;
+}
+
+#get-started-cards h3 {
+  margin: 1rem 0;
+  color: #5712A6;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+#get-started-cards p {
+  color: #82809C;
 }
 
