--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ h1 {
 .home p {
   color: #82809C;
   line-height: 1.3;
-  margin: 2rem 0 2rem 0
-;
+  margin: 2rem 0 2rem 0;
 }
 
 .home button {
@@ -128,7 +127,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3rem 5.2rem;
+  margin: 4rem 5.2rem;
 }
 
 .division img {
@@ -165,5 +164,49 @@ h1 {
 
 #get-started-cards p {
   color: #82809C;
+}
+
+.about-us {
+  display: flex;
+}
+
+.about-us div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.about-us-background-image {
+  max-width: 35rem;
+  width: auto;
+  height: auto;
+}
+
+.about-us-division-line {
+  width: 8.5rem;
+  height: 0.5625rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+
+.about-us p {
+  color: #82809C;
+  line-height: 1.3;
+  margin-top: 1.5rem;
+}
+
+.about-us button {
+  background-color: transparent;
+  border: transparent;
+  cursor: pointer;
+  color: #2678FA;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0;
+  margin-top: 1.5rem;
+
+  &:active {
+    transform: scale(.95);
+  }
 }
 
