--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ h1 {
 
 #get-started-cards p {
   color: #82809C;
+  line-height: 1.3;
 }
 
 .about-us {
@@ -177,7 +178,7 @@ h1 {
 }
 
 .about-us-background-image {
-  max-width: 35rem;
+  max-height: 100vh;
   width: auto;
   height: auto;
 }
@@ -193,6 +194,7 @@ h1 {
   color: #82809C;
   line-height: 1.3;
   margin-top: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .about-us button {
@@ -200,10 +202,10 @@ h1 {
   border: transparent;
   cursor: pointer;
   color: #2678FA;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
   padding: 0;
-  margin-top: 1.5rem;
+  margin-top: 3rem;
 
   &:active {
     transform: scale(.95);
