--- a/css/style.css
+++ b/css/style.css
@@ -282,3 +282,78 @@ h1 {
   top: -22rem;
   right: 0;
 }
+
+.download {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  background-image: url('/public/images/img-fundo-4-teste-programador.png');
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+}
+
+.download div {
+  width: 50vw;
+  height: 100vh;
+  margin-top: 5rem;
+}
+
+.download-line {
+  max-width: 7.6rem;
+  max-height: 0.5rem;
+  background-color: #fff;
+  border-left: 2rem solid #E3E0FF;
+  display: inline-block;
+}
+
+.download h2 {
+  color: #4D128F;
+  font-size: 2rem;
+  margin-top: 2.5rem;
+  font-weight: bold;
+  line-height: 1.3;
+}
+
+.download button {
+  background-color: black;
+  color: white;
+  border: transparent;
+  border-radius: 5px;
+  margin-top: 4rem;
+  margin-right: 2.5rem;
+  padding: 0.25rem 0;
+  cursor: pointer;
+  transition: 100ms ease-in-out;
+  width: 13rem;
+
+  &:hover {
+    transform: translateY(-0.3125rem);
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+}
+
+.download p {
+  font-size: 0.8rem;
+  display: inline-block;
+  text-align: left;
+}
+
+.download strong {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.claystore-logo {
+  width: 2.5rem;
+  margin-right: 0.625rem;
+  margin-left: -1rem;
+}
+
+.playapp-logo {
+  width: 2rem;
+  margin-right: 0.625rem;
+  margin-left: -1.5rem;
+}
