--- a/css/style.css
+++ b/css/style.css
@@ -357,3 +357,47 @@ h1 {
   margin-right: 0.625rem;
   margin-left: -1.5rem;
 }
+
+.register {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 3rem;
+}
+
+.register-content {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.register-content div {
+  display: flex;
+}
+
+.register h2 {
+  color: #5712A6;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1.3;
+}
+
+.arrow {
+  max-height: 3rem;
+  height: auto;
+  width: auto;
+  margin-left: 3rem;
+}
+
+.register-line {
+  max-width: 5.5rem;
+  width: auto;
+  margin-top: 2rem;
+}
+
+footer {
+  background-image: url('/public/images/fundo-footer-teste-programador.png.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  height: 100vh;
+}
