--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-image: url('/public/images/fundo-footer-teste-programador.png.jpg');
+  background-image: url('../public/images/fundo-footer-teste-programador.png.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -57,10 +57,11 @@ footer {
 .footer-bottom {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: white;
   margin: 0 13rem;
   border-top: 1px solid white;
-  padding-top: 1rem;
+  padding: 1rem 0;
   margin-top: 5rem;
 }
 
