--- a/css/register.css
+++ b/css/register.css
@@ -9,6 +9,17 @@
   align-items: flex-start;
   flex-direction: column;
   cursor: pointer;
+  color: #5712A6;
+  transition: transform 100ms ease-in-out;
+
+  &:hover {
+    transform: translateY(-0.3125rem);
+    animation: register-colors 5s ease-in-out infinite;
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
 }
 
 .register-content div {
@@ -16,7 +27,6 @@
 }
 
 .register h2 {
-  color: #5712A6;
   font-size: 2rem;
   line-height: 1.3;
 }
@@ -32,4 +42,22 @@
   max-width: 5.5rem;
   width: auto;
   margin-top: 2rem;
+}
+
+@keyframes register-colors {
+  0%{
+    color: #5712A6;
+  }
+  25%{
+    color: #7D21E8;
+  }
+  50%{
+    color: #26E0FA;
+  }
+  75%{
+    color: #7D21E8;
+  }
+  100%{
+    color: #5712A6;
+  }
 }
