--- a/css/get-started.css
+++ b/css/get-started.css
@@ -41,3 +41,15 @@
   color: #82809C;
   line-height: 1.3;
 }
+
+/* animations */
+
+.get-started.animate {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.get-started.animate-section {
+  opacity: 1;
+  transform: translateX(0);
+}
