--- a/css/register.css
+++ b/css/register.css
@@ -14,7 +14,7 @@
 
   &:hover {
     transform: translateY(-0.3125rem);
-    animation: register-colors 5s ease-in-out infinite;
+    animation: register-colors 5s ease infinite;
   }
 
   &:active {
@@ -44,18 +44,24 @@
   margin-top: 2rem;
 }
 
+/* animations */
+
+.register.animate {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.register.animate-section {
+  opacity: 1;
+  transform: translateX(0);
+}
+
 @keyframes register-colors {
   0%{
     color: #5712A6;
   }
-  25%{
-    color: #7D21E8;
-  }
   50%{
     color: #26E0FA;
-  }
-  75%{
-    color: #7D21E8;
   }
   100%{
     color: #5712A6;
